Fix for side nav jumping on hover

--- a/_sass/components/_sidenav.scss
+++ b/_sass/components/_sidenav.scss
@@ -9,14 +9,6 @@
   }
 }
 
-.usa-layout-docs-sidenav {
-  h3 {
-    border-bottom: $border-width solid $border-color;
-    margin-bottom: 0;
-    padding-bottom: $spacing-small;
-  }
-}
-
 .usa-sidenav-list a {
   font-family: $font-serif;
   padding: $spacing-small 0;
